--- a/Exercicios/06/style.css
+++ b/Exercicios/06/style.css
@@ -41,12 +41,13 @@
     font-family: 'Raleway', sans-serif;
     text-align: center;
     padding-top: 30pt;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    font-size: 30pt;
 }
 
 .box img {
-    width: 110px;
-    height: 110px;
+    width: 300px;
+    height: 300px;
     border: 2px solid whitesmoke;
     border-radius: 50%;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
@@ -56,7 +57,8 @@
     padding-top: 30px;
     margin: auto;
     text-align: center;
-    max-width: 400px;
+    max-width: 500px;
+    width: 250px;
     margin-bottom: 20px;
 }
 
