--- a/Exercicios/06/style.css
+++ b/Exercicios/06/style.css
@@ -36,6 +36,7 @@
     margin: auto;
     animation-name: animacao;
     animation-duration: 4s;
+    animation-delay: 2s;
     text-align: center;
 }
 
@@ -45,7 +46,7 @@
     text-align: center;
     padding-top: 30pt;
     margin-bottom: 20px;
-    font-size: 30pt;
+    font-size: 44px;
 }
 
 .box img {
@@ -71,6 +72,7 @@
     font-size: 15pt;
     animation-name: animacao-txt;
     animation-duration: 4s;
+    animation-delay: 2s;
 }
 
 .box button {
